# m5atoms3_shake_check

./: CMakeLists.txt
main/: CMakeLists.txt  fft.c  fft.h  main.cc
